--- a/IPAlert/IPAlert.csproj
+++ b/IPAlert/IPAlert.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Autofac" Version="8.2.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="22.0.12" />
   </ItemGroup>
 
   <ItemGroup>
