Adding followup timers after network events to make sure the end state is correct (due to network race conditions)

--- a/IPAlert/Settings/appsettings.json
+++ b/IPAlert/Settings/appsettings.json
@@ -1,6 +1,6 @@
 {
   "NotificationsEnabled": true,
   "NotificationTimeMs": 5000,
-  "Mode": "Timed",
+  "Mode": "OnNetworkChanges",
   "PollingTimeMs": 1000
 }
