Updating Log folder and filename to use caps. Simplifying OnNetworkChanges mode to just be called Auto.

--- a/IPAlert/Settings/appsettings.json
+++ b/IPAlert/Settings/appsettings.json
@@ -1,6 +1,6 @@
 {
   "NotificationsEnabled": true,
   "NotificationTimeMs": 5000,
-  "Mode": "OnNetworkChanges",
+  "Mode": "Timed",
   "PollingTimeMs": 1000
 }
